@@ -1,10 +1,10 @@
-bin_PROGRAMS = mb-appearance
+bin_PROGRAMS = matchbox-appearance
 
-mb_appearance_SOURCES = mb-appearance.c
-mb_appearance_CPPFLAGS = \
+matchbox_appearance_SOURCES = mb-appearance.c
+matchbox_appearance_CPPFLAGS = \
 	$(GCONF_CFLAGS) $(GTK_CFLAGS) $(GLADE_CFLAGS) \
 	-DDATADIR="\"$(datadir)\"" -DPKGDATADIR="\"$(pkgdatadir)\""
-mb_appearance_LDADD = $(GCONF_LIBS) $(GTK_LIBS) $(GLADE_LIBS)
+matchbox_appearance_LDADD = $(GCONF_LIBS) $(GTK_LIBS) $(GLADE_LIBS)
 
 applicationdir = $(datadir)/applications
 application_DATA = mb-appearance.desktop
